--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
         <item>4eme</item>
         <item>3eme</item>
         <item>2nd</item>
+        <item>1ere</item>
         <item>Terminal</item>
     </string-array>
 
