--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,9 @@
         <item>Géographie</item>
         <item>SVT</item>
         <item>Physique</item>
+        <item>Art</item>
         <item>Chimie</item>
+        <item>momo</item>
     </string-array>
 
     <string-array name="niveau_array">
